kubernetes/05-gitlab/gitlab-svc/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - accounts.apps.owidev.net
    secretName: keycloak-tls
  rules:
  - host: accounts.apps.owidev.net
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 80
